[package]
name = "awsapp"
version = "0.1.0"
authors = ["kahgeh.tan <kahgeh.tan@xero.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "0.45.0"
rusoto_s3="0.45.0"
tokio = "0.3.1"
actix-web = "3"
actix-session = "0.4"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"