[package]
name = "awsapp"
version = "0.1.0"
authors = ["kahgeh.tan <kahgeh.tan@xero.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "0.45.0"
rusoto_s3="0.45.0"
tokio = { version = "0.3.3", features = ["full"] }
tokio-util = { version="0.5.0", features=["compat"]}
actix-web = "3"
actix-session = "0.4"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
futures = "0.3.7"
futures-sink = "0.3.7"